Update package.json for deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://johlbaum.github.io/booki",
+  "homepage": "http://johlbaum.github.io/kasa",
   "name": "projet_6",
   "version": "0.1.0",
   "private": true,
